[package]
name = "gdb-remote-protocol"
edition = "2018"
version = "0.1.0"
description = "An implementation of the GDB remote protocol"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "Apache-2.0/MIT"

[dependencies]
log = "0.4.1"
nom = "3.2.0"
strum = "0.8.0"
strum_macros = "0.8.0"
bitflags = "1.0"
byteorder = "1.2"
memchr = "2.3.3"
libc = { version = "0.2.71", optional = true }
num-derive = "0.3.0"
num-traits = "0.2.12"

[dev-dependencies]
assert_cli = "0.5.4"
env_logger = "0.4.3"
which = "1.0.3"

[features]
all_stop = []
lldb = []
